# 03-crystalline-worldsheet

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  checksums.txt  citation.csl.json  main.py  main.tex  package.json  pnpm-lock.yaml  pyproject.toml
docs/: TODO.md  build-guide.md  installation.md
lean/: CW3_Backing.lean  README.md  lake-manifest.json  lakefile.toml
scripts/figures/: CW3_all_figures.py  main.py
scripts/tasks/: citation.ts
src/: bibliography.bib
src/chapters/: 01-introduction-abstract.tex  01-introduction.tex  02-methods.tex  03-derivations.tex  04-implications.tex  05-discussion.tex  06-conclusions.tex  acknowledgments.tex  appendix.tex  disclosure.tex  references.tex
tests/: CW3_backing_verify.py
